Crash with freestyle and particle hair #40307

Closed
opened 2014-05-22 02:56:05 +02:00 by Ben Kyte · 7 comments

System Information
Ubuntu 14.04
Nvidia Geforce GT 640

Blender Version
Broken: 2.70a

Short description of error
Blender crashes with freestyle enabled while rendering particle hair with object rendering and a length of zero.

Exact steps for others to reproduce the error
Render the scene.

Crash_report.blend

**System Information** Ubuntu 14.04 Nvidia Geforce GT 640 **Blender Version** Broken: 2.70a **Short description of error** Blender crashes with freestyle enabled while rendering particle hair with object rendering and a length of zero. **Exact steps for others to reproduce the error** Render the scene. [Crash_report.blend](https://archive.blender.org/developer/F89640/Crash_report.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BenjaminKyte

Added subscriber: @BenjaminKyte
Tamito Kajiyama was assigned by Sergey Sharybin 2014-05-22 09:36:41 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 97d047a3e9

This issue was referenced by 97d047a3e9a52d9e2d8c0eee6932ab9ab9199ab9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 97d047a3e9.

Closed by commit 97d047a3e9.

Many thanks for the problem report!

Many thanks for the problem report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40307
No description provided.