source/blender/freestyle/intern/winged_edge/WingedEdgeBuilder.h
@@ -117,7 +117,7 @@ public:
 	}
 
 protected:
-	virtual void buildWShape(WShape& shape, IndexedFaceSet& ifs);
+	virtual bool buildWShape(WShape& shape, IndexedFaceSet& ifs);
 	virtual void buildWVertices(WShape& shape, const real *vertices, unsigned vsize);
 
 	RenderMonitor *_pRenderMonitor;
